Add load balancer (Ribbon)

--- a/hr-payroll-service/src/main/resources/application.properties
+++ b/hr-payroll-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=hr-payroll-service
 server.port=8002
 
 ## Custom ##
-hr-employee.host=http://localhost:8001
+hr-employee-service.ribbon.listOfServers=localhost:8000,localhost:8001
