--- a/hr-payroll-service/pom.xml
+++ b/hr-payroll-service/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>2.2.8.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+			<version>2.2.8.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
