--- a/hr-payroll-service/pom.xml
+++ b/hr-payroll-service/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 			<version>2.2.8.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -66,6 +72,14 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Hoxton.SR8</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
