--- a/hr-payroll-service/src/main/resources/application.properties
+++ b/hr-payroll-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=hr-payroll-service
 server.port=8002
 
-## Custom ##
-hr-employee-service.ribbon.listOfServers=localhost:8000,localhost:8001
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
