Fix Internal Server Error when communicating between microservices

--- a/hr-payroll-service/src/main/resources/application.properties
+++ b/hr-payroll-service/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=hr-payroll-service
 server.port=8002
 
+spring.cloud.loadbalancer.ribbon.enabled=false
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.fetch-registry=true
+
