--- a/hr-payroll-service/pom.xml
+++ b/hr-payroll-service/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+			<version>2.2.8.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
