--- a/hr-payroll-service/src/main/resources/application.properties
+++ b/hr-payroll-service/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.cloud.loadbalancer.ribbon.enabled=false
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.fetch-registry=true
 
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
+
